<resources>
    <string name="app_name">iManage</string>
    <string name="loader_text">Loading</string>
    <string name="splash_icon">Icon</string>
    <string name="invent_icon">Inventory Management</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="text_pass">Password</string>
    <string name="text_email">Email</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="details">Details</string>
    <string name="status">Status</string>
    <string name="title_activity_inventory_main">InventoryMainActivity</string>
    <string name="auth_success">Authentication Successful!</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_menu_title">Inventory Management</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="already_registered">Have an account? Login</string>
    <string name="username">Username</string>
    <string name="firebase_info">Creating an account will add your information to the cloud</string>
    <string name="my_inventories">My Inventories</string>
    <string name="txt_bypass">Bypass</string>
    <string name="signin_info">Please sign in with your email and password</string>
    <string name="rack_name">Rack Name</string>
    <string name="rack_amount">Insert amount</string>
    <string name="txt_add">Add</string>
    <string name="company_name">Company Name</string>
    <string name="cam_input">Input</string>
    <string name="scan">Scan</string>
    <string name="add_to_inven">Click the Input button to add the QR code data to your current Inventory</string>
    <string name="iManage">iManage - Inventory Management</string>

</resources>
