<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_nav"
        tools:context=".NavActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:orientation="vertical">

            <EditText
                android:inputType="text"
                android:hint="@string/rack_name"
                android:autofillHints="@string/rack_name"
                android:id="@+id/et"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:padding="8dp" />

            <EditText
                android:inputType="number"
                android:hint="@string/rack_amount"
                android:autofillHints="@string/rack_amount"
                android:id="@+id/etd"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:padding="8dp" />

            <Button
                android:id="@+id/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_add" />
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>

